Ability to use multiple layouts added. WYSIWYG module

--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
   <link rel="stylesheet" href="stylesheets/application.css" />
 </head>
 <body>
-  <h1>Scaffy</h1>
+  <div class="wrapper">
+    <h1>Scaffy</h1>
+    <div class="wysiwyg">
+      <p>About framework description</p>
+
+      <ol>
+        <li>Numeric list</li>
+        <li>Numeric list</li>
+        <li>Numeric list</li>
+      </ol>
+
+      <ul>
+        <li>Bulleted list</li>
+        <li>Bulleted list</li>
+        <li>Bulleted list</li>
+      </ul>
+
+      <table>
+        <tr>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+        </tr>
+        <tr>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+        </tr>
+      </table>
+    </div>
+  </div>
 </body>
 </html>
