Removed font-size from default table styling of WYSIWYG

--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
           <td>Cell</td>
           <td>Cell</td>
         </tr>
+        <tr>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+        </tr>
+        <tr>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+        </tr>
       </table>
     </div>
   </div>
