--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
     </dl>
 
     <ol>
-      <li>List Item</li>
-      <li>List Item</li>
-      <li>List Item</li>
+      <li>Ordered item</li>
+      <li>Ordered item</li>
+      <li>Ordered item</li>
     </ol>
 
     <ul>
-      <li>List Item</li>
-      <li>List Item</li>
-      <li>List Item</li>
+      <li>Unordered</li>
+      <li>Unordered</li>
+      <li>Unordered</li>
     </ul>
     <hr />
 
@@ -109,7 +109,6 @@
         </p>
       </form>
     </fieldset>
-    <hr />
 
     <h1>Tables</h1>
     <table>
@@ -137,7 +136,7 @@
     <hr />
 
     <h2>Pre</h2>
-    <pre><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. <acronym title="National Basketball Association">NBA</acronym> Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.  <abbr title="Avenue">AVE</abbr></p></pre>
+    <pre>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. <acronym title="National Basketball Association">NBA</acronym> Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.  <abbr title="Avenue">AVE</abbr></pre>
 
     <h2>Blockquote</h2>
     <blockquote>
