New deploy scheme

--- a/public/html/bundle.html
+++ b/public/html/bundle.html
@@ -3,32 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Scaffy framework</title>
-    <link href="stylesheets/framework/base.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/layouts/futurico.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/library/dark/buttons.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/library/dark/checkboxes.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/library/dark/selects.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/library/dark/text-inputs.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/appreciate.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/circle-banner.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/comments.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/commutator.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/crossbar.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/currently-playing.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/datepicker.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/equalizer.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/header.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/login-block.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/pagination.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/progressbar.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/scrollbox.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/site-info.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/slideshow.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/starbar.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/sticker.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/tabbox.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/modules/dark/user-slug.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/futurico-dark.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/bundle.css" media="screen" rel="stylesheet" type="text/css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="javascripts/vendor/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
     <script src="javascripts/SCF.ui.js" type="text/javascript"></script>
@@ -44,7 +19,7 @@
     <script src="javascripts/SCF.ui/tabbox.js" type="text/javascript"></script>
   </head>
   <body>
-    <img alt="" class="background-light" src="images/futurico/background-light.png">
+    <img alt="" class="background-light" src="images/background-light.png">
     <div class="container">
       <div class="header">
         <div class="wrapper clearfix">
@@ -266,7 +241,7 @@
                           </h2>
                           <div class="preloader"></div>
                         </div>
-                        <img alt="" src="images/futurico/tabbox/fish-decor.png">
+                        <img alt="" src="images/tabbox/fish-decor.png">
                       </div>
                       <div id="tabbox-messages">
                         <div class="heading">
@@ -275,7 +250,7 @@
                             <span class="status-message positive">2 new</span>
                           </h2>
                         </div>
-                        <img alt="" src="images/futurico/tabbox/fish-decor.png">
+                        <img alt="" src="images/tabbox/fish-decor.png">
                       </div>
                       <div id="tabbox-cloud">
                         <div class="heading">
@@ -284,7 +259,7 @@
                             <span class="status-message">Total: 91,819,826</span>
                           </h2>
                         </div>
-                        <img alt="" src="images/futurico/tabbox/fish-decor.png">
+                        <img alt="" src="images/tabbox/fish-decor.png">
                       </div>
                     </div>
                   </div>
@@ -308,7 +283,7 @@
                           </h2>
                           <div class="preloader"></div>
                         </div>
-                        <img alt="" src="images/futurico/tabbox/fish-decor.png">
+                        <img alt="" src="images/tabbox/fish-decor.png">
                       </div>
                       <div id="tabbox-messages-2">
                         <div class="heading">
@@ -317,7 +292,7 @@
                             <span class="status-message positive">2 new</span>
                           </h2>
                         </div>
-                        <img alt="" src="images/futurico/tabbox/fish-decor.png">
+                        <img alt="" src="images/tabbox/fish-decor.png">
                       </div>
                     </div>
                   </div>
@@ -384,7 +359,7 @@
               <div class="last-col">
                 <div class="mll pll">
                   <div class="user-slug">
-                    <img alt="Username" class="slug-avatar" src="images/futurico/avatar.jpg">
+                    <img alt="Username" class="slug-avatar" src="images/avatar.jpg">
                     <ul class="last-col">
                       <li class="slug-name">Sergii Iurevych</li>
                       <li class="slug-status online">Online</li>
@@ -495,17 +470,17 @@
                 <div class="slideshow">
                   <div class="slideshow-slides-wrapper">
                     <ul class="slideshow-slides">
-                      <li class="each-slide" style="background-image: url('images/futurico/slideshow/test-slide.jpg')">
+                      <li class="each-slide" style="background-image: url('images/slideshow/test-slide.jpg')">
                         <div class="slide-description">
                           Elephants never forget
                         </div>
                       </li>
-                      <li class="each-slide" style="background-image: url('images/futurico/slideshow/test-slide-2.jpg')">
+                      <li class="each-slide" style="background-image: url('images/slideshow/test-slide-2.jpg')">
                         <div class="slide-description">
                           Elephants never forget
                         </div>
                       </li>
-                      <li class="each-slide" style="background-image: url('images/futurico/slideshow/test-slide-3.jpg')">
+                      <li class="each-slide" style="background-image: url('images/slideshow/test-slide-3.jpg')">
                         <div class="slide-description">
                           Elephants never forget
                         </div>
