--- a/public/html/bundle.html
+++ b/public/html/bundle.html
@@ -17,6 +17,7 @@
     <script src="javascripts/SCF.ui/scrollbox.js" type="text/javascript"></script>
     <script src="javascripts/SCF.ui/slideshow.js" type="text/javascript"></script>
     <script src="javascripts/SCF.ui/tabbox.js" type="text/javascript"></script>
+    <script src="javascripts/SCF.ui/starbar.js" type="text/javascript"></script>
   </head>
   <body>
     <img alt="" class="background-light" src="images/background-light.png">
@@ -394,9 +395,9 @@
               <div class="last-col">
                 <div class="mbm">
                   <div class="starbar clearfix">
-                    <div class="star full"></div>
-                    <div class="star full"></div>
-                    <div class="star half"></div>
+                    <div class="star"></div>
+                    <div class="star"></div>
+                    <div class="star"></div>
                     <div class="star"></div>
                     <div class="star"></div>
                     <div class="starbar-rating">
