Documentation: modules & who's using it

--- a/index.html
+++ b/index.html
@@ -233,23 +233,23 @@ $space-l: 20px</code>
               </p>
             </li>
             <li>
-              If module gets too big, slice it to keep code small:
+              If module gets too big, slice it to keep code small and flat structure:
               <p class="mvx">
-                <strong>/modules/participant/info.sass</strong>
+                <strong>/modules/player-info.sass</strong>
               </p>
               <p class="mbx">
-                <strong>/modules/participant/status.sass</strong>
+                <strong>/modules/player-status.sass</strong>
               </p>
               <p class="mbx">
-                <strong>/modules/participant/controls.sass</strong>
+                <strong>/modules/player-controls.sass</strong>
               </p>
               <p class="mbx">
-                <strong>/modules/participant/states.sass</strong>
+                <strong>/modules/player-states.sass</strong>
               </p>
             </li>
           </ul>
           <h2 class="firm">Grids</h2>
-          <p class="mbl">Grids control width. 6 sizes available by default.</p>
+          <p class="mbl">We like <a href="http://github.com/stubbornella/oocss/blob/master/core/grid/grids.css">Nicole Sullivan grids</a> system. There are 6 sizes available by default. We modified class names a bit to write less:</p>
           <div class="clearfix debug-grids">
             <div class="col1of2">
               <div class="inner-col">Column 1 of 2</div>
@@ -322,9 +322,9 @@ $space-l: 20px</code>
           </div>
           <h2 class="mtl firm">Who use it?</h2>
           <p class="mbl">
-            All products in
+            Most of the products in
             <a href="http://railsware.com">Railsware</a>
-            are made based on Scaffy.
+            are made based on Scaffy. We're working hard to get all achievements ;)
           </p>
           <p>
             Also
