--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <pre>
 <code>.player .avatar  -> .player-avatar
 .navigation li   -> .navigation-item
+.navigation li   -> .navigation > li /* In case navigation is flat and doesn't have a big nesting */
 .lightbox .close -> .lightbox-close</code>
 </pre>
               </p>
