--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <link href="css/framework/base.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="css/layouts/application.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="css/modules/debug-grid.css" media="screen" rel="stylesheet" type="text/css" />
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-30342381-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+       })();
+
+     </script>
   </head>
   <body>
     <div class="container">
