--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-30342381-1']);
+      _gaq.push(['_setAccount', 'UA-743259-13']);
       _gaq.push(['_trackPageview']);
 
       (function() {
@@ -22,6 +22,7 @@
   </head>
   <body>
     <div class="container">
+      <a href="http://railsware.com" class="link-by-railsware">Brought to you by Railsware</a>
       <div class="content">
         <div class="wrapper">
           <h1>
@@ -341,7 +342,7 @@ $space-l: 20px</code>
           </p>
           <p>
             Also
-            <a href="http://futurico.herokuapp.com">Futurico User Interface</a>
+            <a href="http://designmodo.com/futurico-html">Futurico User Interface</a>
             is based on it.
           </p>
         </div>
