--- a/index.html
+++ b/index.html
@@ -345,6 +345,11 @@ $space-l: 20px</code>
             <a href="http://designmodo.com/futurico-html">Futurico User Interface</a>
             is based on it.
           </p>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-via="railsware">Tweet</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+          <a href="https://twitter.com/railsware" class="twitter-follow-button" data-show-count="false">Follow @railsware</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
       </div>
     </div>
