--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ $space-l: 20px</code>
             <a href="http://railsware.com">Railsware</a>
             are made based on Scaffy. We're working hard to get all achievements ;)
           </p>
-          <p>
+          <p class="mbl">
             Also
             <a href="http://designmodo.com/futurico-html">Futurico User Interface</a>
             is based on it.
