--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             Scaffy
           </h1>
           <h3 class="mbl">
-            Set of best practices, approaches &amp; tools by <a href="http://railsware.com">Railsware</a> client engineers
+            Set of best practices, approaches &amp; tools by <a class="rw-link" href="http://railsware.com">Railsware</a> client engineers
             to write logical, modular, easily maintainable & extendable CSS.
             <a href="http://github.com/railsware/scaffy">Scaffy on Github</a>
           </h3>
@@ -337,7 +337,7 @@ $space-l: 20px</code>
           <h2 class="mtl firm">Who use it?</h2>
           <p class="mbl">
             Most of the products in
-            <a href="http://railsware.com">Railsware</a>
+            <a href="http://railsware.com" class="rw-link">Railsware</a>
             are made based on Scaffy. We're working hard to get all achievements ;)
           </p>
           <p class="mbl">
