--- a/futurico/index.html
+++ b/futurico/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <title>Scaffy framework</title>
+    <title>Futurico UI pack HTML Edition based on Scaffy framework</title>
     <link href="bundle.css" media="screen" rel="stylesheet" type="text/css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="javascripts/vendor/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
@@ -66,6 +66,8 @@
             </h3>
             Using
             <a href="http://railsware.github.com/scaffy">Scaffy</a>
+            by 
+            <a href="http://railsware.github.com/scaffy" class="site-info-rw-link">Railsware</a>
           </div>
         </div>
       </div>
