--- a/futurico/index.html
+++ b/futurico/index.html
@@ -67,7 +67,7 @@
             Using
             <a href="http://railsware.github.com/scaffy">Scaffy</a>
             by 
-            <a href="http://railsware.github.com/scaffy" class="site-info-rw-link">Railsware</a>
+            <a href="http://railsware.com" class="site-info-rw-link">Railsware</a>
           </div>
         </div>
       </div>
