--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               </p>
               <p class="mbl">
                 Code is never predictable to find by looking just at the 
-                selector. So much frustration
+                selector. So much frustration.
               </p>
               <h2 class="positive">
                 And we decided to start with 
