--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="content">
               <p class="mbl">
                 One major problem is a clear communication
-                and involving collaboration accross the team. Everyone writes 
+                and involving collaboration across the team. Everyone writes 
                 code in the way he feels comfortable. No rules. Just a mess.
               </p>
               <p class="mbl">
@@ -159,7 +159,7 @@
 
                 <h2 class="positive ptl">Code style &amp; conventions</h2>
                 <img class="article-pic" src="images/article/talk-about-me.jpg" alt="" />
-                Depending on your project needs team should define a code style to be used accross the project.
+                Depending on your project needs team should define a code style to be used across the project.
                 Here is an example:
 <pre>
 <code>.selector {
