--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <title>Scaffy framework</title>
+    <title>Scaffy approach</title>
     <link href="css/framework/base.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="css/layouts/application.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="css/modules/debug-grid.css" media="screen" rel="stylesheet" type="text/css" />
