--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                 when project grows continuously.
               </p>
               <p class="mbl">
+                Maintenance become a huge pain in the ass when not used old 
+                code is spreaded all over a project.
+              </p>
+              <p class="mbl">
                 Code is never predictable to find by looking just at the 
                 selector. So much frustration.
               </p>
