--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <img src="images/logo.png" alt="Scaffy by Railsware" />
           </div>
           <div class="col3of4 by-right">
+            <a class="button mrm" href="http://railsware.github.com/scaffy/futurico">Demo</a>
             <a class="button" href="http://github.com/railsware/scaffy">Fork on Github</a>
           </div>
         </div>
