Library as a separate layer for misc small object storage

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Scaffy approach</title>
     <link href="css/framework/base.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="css/layouts/application.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="css/library/library.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="css/modules/debug-grid.css" media="screen" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
 
@@ -25,7 +26,7 @@
       <a href="http://railsware.com" class="link-by-railsware">Brought to you by Railsware</a>
       <div class="wrapper">
         <!-- Headline ============================-->
-        <div class="clearfix mbl">
+        <div class="row">
           <div class="col1of4">
             <img src="images/logo.png" alt="Scaffy by Railsware" />
           </div>
@@ -36,7 +37,7 @@
         </div>
 
         <!-- Logo with description ============================-->
-        <div class="clearfix mbl">
+        <div class="row">
           <div class="col1of4">
             <img src="images/css3.png" class="symbol" alt="CSS3 Scaffy" />
           </div>
@@ -49,7 +50,7 @@
         </div>
 
         <!-- Introduction section ============================-->
-        <div class="clearfix mbl">
+        <div class="row">
           <div class="col1of4 by-right">
             <h2 class="firm">Preface</h2>
           </div>
@@ -67,7 +68,7 @@
           </div>
         </div>
 
-        <div class="clearfix mbm">
+        <div class="row">
           <div class="col1of4 by-right">
             <h2 class="firm">Problems</h2>
           </div>
@@ -112,7 +113,7 @@
         </div>
 
         <!-- Achievements ============================-->
-        <div class="clearfix mbl ptl">
+        <div class="row">
           <div class="col1of4 by-right">
             <h2 class="firm">Benefits</h2>
           </div>
@@ -302,7 +303,7 @@ $space-l: 20px</code>
           </div>
         </div>
 
-        <div class="clearfix mbl">
+        <div class="row">
           <div class="col1of4 by-right">
             <h2 class="firm">So what's inside?</h2>
           </div>
